# univer

./: Cargo.toml  README.md  Taskfile.yml
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-windows.yml
docs/: README.md
manual/: book.toml
src/: cli.rs  develop.rs  errors.rs  lib.rs  main.rs  model.rs  publish.rs  utils.rs
tests/: mod.rs
tests/test_cli/: mod.rs  test_help.rs  test_no_arguments.rs
tests/test_develop/: mod.rs
tests/test_develop/test_01/: Cargo.toml  mod.rs
tests/test_develop/test_no_crates_to_develop/: Cargo.toml  mod.rs
tests/test_publish/: mod.rs
tests/test_publish/test_01/: Cargo.toml  mod.rs
tests/test_publish/test_no_crates_to_publish/: mod.rs
