[package]
name = "univer"
version = "0.0.2"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Unified versions publisher"
repository = "https://github.com/EngosSoftware/univer.git"
license = "MIT OR Apache-2.0"
edition = "2024"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "CODE_OF_CONDUCT.md",
    "manual/"
]

[lib]
name = "univer"
path = "src/lib.rs"

[[bin]]
name = "univer"
path = "src/main.rs"

[dependencies]
antex = "0.2.1"
clap = { version = "4.6.1", features = ["cargo"] }
cargo_metadata = "0.23.1"
petgraph = "0.8.3"
toml = "1.1.2"

[dev-dependencies]
cli-assert = "0.1.12"
