[workspace]
members = ["packages/*"]

resolver = "2"

[workspace.package]
version = "3.0.2"

[workspace.dependencies]
cosmwasm-core = { path = "packages/core" }
cosmwasm-crypto = { path = "packages/crypto" }
cosmwasm-derive = { path = "packages/derive" }
cw-schema-derive = { path = "packages/cw-schema-derive" }
cw-schema = { path = "packages/cw-schema" }
cosmwasm-schema-derive = { path = "packages/schema-derive" }
cosmwasm-schema = { path = "packages/schema" }
cosmwasm-std = { path = "packages/std", default-features = false }
cosmwasm-vm-derive = { path = "packages/vm-derive" }
cosmwasm-vm = { path = "packages/vm" }
cosmwasm-check = { path = "packages/check" }
go-gen = { path = "./packages/go-gen" }
schemars = "1.2.1"
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
